--- a/app/views/gcloud-service-dashboard.html
+++ b/app/views/gcloud-service-dashboard.html
@@ -11,10 +11,8 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
         Your G-Cloud 12 services
-
       </h1>
       <p>
-
         The information you provide here: </p>
         <ul class="govuk-list govuk-list--bullet">
 
@@ -31,6 +29,25 @@
           </button>
           </a>
           </p>
+
+          <div class="gcloud-services-added">
+          <h2 class="govuk-heading-l">Services</h2>
+
+          <h3 class="govuk-heading-m">Ready for submission</h3>
+          <p>These services will be submitted and can be edited before the deadline</p>
+
+          <p>CoconutHosting</p>
+          <p><a href="#">Edit</a></p>
+
+          <h3 class="govuk-heading-m">Draft</h3>
+          <p>These services will be submitted and you can keep editing them before the deadline</p>
+
+          <p>CoconutEditor</p>
+          <p><a href="#">Edit</a></p>
+
+
+
+          </div>
 
     </div>
   </div>
