--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,7 +23,7 @@
       <ol class="govuk-list govuk-list--number">
       <li><a href="gcloud-home">G-Cloud home – beginning</a></li>
       <li><a href="gcloud-service-type">Picking a service type question page</a></li>
-      <li><a href="gcloud-service-added">G-Cloud home – when a service has been added</a></li>
+      <li><a href="gcloud-service-dashboard">G-Cloud home – when a service has been added</a></li>
       </ol>
 
 
