--- a/app/views/gcloud-service-dashboard.html
+++ b/app/views/gcloud-service-dashboard.html
@@ -9,7 +9,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         Your G-Cloud 12 services
       </h1>
       <p>
@@ -22,34 +22,79 @@
           <li>should help buyers review and compare services </li>
         </ul>
 
-          <p>
-            <a href="gcloud-service-type">
-          <button class="govuk-button" data-module="govuk-button">
-            Add a service
-          </button>
-          </a>
-          </p>
 
-          <div class="gcloud-services-added">
-          <h2 class="govuk-heading-l">Services</h2>
+        <p>
+          <a href="gcloud-service-type">
+        <button class="govuk-button" data-module="govuk-button">
+          Add a service
+        </button>
+        </a>
+        </p>
 
-          <h3 class="govuk-heading-m">Ready for submission</h3>
-          <p>These services will be submitted and can be edited before the deadline</p>
 
-          <p>CoconutHosting</p>
-          <p><a href="#">Edit</a></p>
+          <div class="govuk-width-container">
 
-          <h3 class="govuk-heading-m">Draft</h3>
-          <p>These services will be submitted and you can keep editing them before the deadline</p>
+  <main class="govuk-main-wrapper">
 
-          <p>CoconutEditor</p>
-          <p><a href="#">Edit</a></p>
+    <h3 class="govuk-heading-m">Ready for submission (3)</h3>
+    <p>These services will be submitted and can be edited before the deadline</p>
+
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds service-title">
+        <p class="govuk-body">CoconutHosting</p>
+      </div>
+
+      <div class="govuk-grid-column-one-third service-title">
+        <p class="govuk-body"><a href="#">Edit</a></p>
+      </div>
+    </div>
+
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds service-title">
+        <p class="govuk-body">CoconutHostPro</p>
+      </div>
+
+      <div class="govuk-grid-column-one-third service-title">
+        <p class="govuk-body"><a href="#">Edit</a></p>
+      </div>
+    </div>
+
+
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds service-title">
+            <p class="govuk-body">CoconutEditor</p>
+          </div>
+
+          <div class="govuk-grid-column-one-third service-title">
+            <p class="govuk-body"><a href="#">Edit</a></p>
+          </div>
+        </div>
+
+  </main>
+</div>
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h3 class="govuk-heading-m">Drafts (1)</h3>
+  </div>
+</div>
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds service-title service-title">
+    <p class="govuk-body">CoconutEditorPro</p>
+  </div>
+
+  <div class="govuk-grid-column-one-third  service-title service-title">
+    <p class="govuk-body"><a href="#">Continue</a></p>
+  </div>
+</div>
+
 
 
 
           </div>
 
     </div>
-  </div>
+
 
 {% endblock %}
