--- a/app/views/gcloud-home.html
+++ b/app/views/gcloud-home.html
@@ -19,7 +19,7 @@
         <ul class="govuk-list govuk-list--bullet">
 
           <li>will be public</li>
-          <li>maybe used as filters </li>
+          <li>may be used as filters </li>
           <li>will appear on your service description page</li>
           <li>should help buyers review and compare services </li>
         </ul>
