--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,13 +20,16 @@
 
       <h2 class="govuk-heading-m">G-Cloud prototype index</h2>
 
+      <h3 class="govuk-heading-s">Choosing G-Cloud service type redesign</h3>
       <ol class="govuk-list govuk-list--number">
       <li><a href="gcloud-home">G-Cloud home – beginning</a></li>
       <li><a href="gcloud-service-type">Picking a service type question page</a></li>
       <li><a href="gcloud-service-dashboard">G-Cloud home – when a service has been added</a></li>
       </ol>
 
-
+      <h3 class="govuk-heading-s">Service categories redesign: select high-level categories then select subcategories in a one-thing-per-page style </h3>
+      <ol class="govuk-list govuk-list--number">
+      <li><a href="gcloud-categories-list">Choosing a high-level category</a></li>
     </div>
   </div>
 
