--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -17,6 +17,20 @@ $govuk-assets-path: '/govuk/assets/';
 // Components that aren't in Frontend
 @import "components/cookie-banner";
 
+// Don't include the font since it needs to be served from the node modules
+// directory it'll only 404 on apps.
+$govuk-include-default-font-face: false;
+
+// Core styles used for the example pages
+@import "node_modules/govuk-frontend/govuk/base";
+@import "node_modules/govuk-frontend/govuk/objects/all";
+@import "node_modules/govuk-frontend/govuk/core/all";
+@import "node_modules/govuk-frontend/govuk/components/checkboxes/checkboxes";
+@import "node_modules/govuk-frontend/govuk/components/back-link/back-link";
+@import "node_modules/govuk-frontend/govuk/components/breadcrumbs/breadcrumbs";
+
+// Component specific styles
+@import "miller-columns";
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
 .govuk-header__content {
