Move govuk-frontend import

--- a/app/assets/sass/miller-columns-selected.scss
+++ b/app/assets/sass/miller-columns-selected.scss
@@ -1,3 +1,5 @@
+@import "node_modules/govuk-frontend/govuk/base";
+
 .miller-columns-selected {
   @include govuk-responsive-margin(6, "bottom");
   display: block;
