Fix curly quotes

--- a/app/views/gcloud-categories-miller.html
+++ b/app/views/gcloud-categories-miller.html
@@ -40,6 +40,6 @@
   </ul>
 </miller-columns>
 
-<script src=“/public/javascripts/miller-columns.js”></script>
+<script src="/public/javascripts/miller-columns.js"></script>
 
 {% endblock %}
