Miller columns working

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,7 +29,9 @@
 
       <h3 class="govuk-heading-s">Service categories redesign: select high-level categories then select subcategories in a one-thing-per-page style </h3>
       <ol class="govuk-list govuk-list--number">
-      <li><a href="gcloud-categories-list">Choosing a high-level category</a></li>
+        <li><a href="gcloud-categories-miller">(A) Miller columns</a></li>
+
+      <li><a href="gcloud-categories-list">(B) Sequential category picker</a></li>
     </div>
   </div>
 
