--- a/app/views/gcloud-categories-miller.html
+++ b/app/views/gcloud-categories-miller.html
@@ -18,8 +18,8 @@
 <miller-columns class="miller-columns" for="taxonomy" selected="selected-items" id="miller-columns" aria-describedby="navigation-instructions">
   <ul id="taxonomy">
     <li>
-      <input class="govuk-checkboxes__input" type="checkbox" id="accounting">
-      <label class="govuk-label govuk-checkboxes__label" for="accounting">
+      <input class="govuk-visually-hidden" type="checkbox" id="accounting">
+      <label class="govuk-label govuk-checkboxes__label for="accounting">
         Accounting and finance
       </label>
       <ul>
@@ -33,6 +33,42 @@
           <input class="govuk-checkboxes__input" type="checkbox" id="childcare-and-early-years">
           <label class="govuk-label govuk-checkboxes__label" for="childcare-and-early-years">
             Accounts receivable
+          </label>
+        </li>
+        <li>
+          <input class="govuk-checkboxes__input" type="checkbox" id="divorce-separation-and-legal-issues">
+          <label class="govuk-label govuk-checkboxes__label" for="divorce-separation-and-legal-issues">
+            Asset management
+          </label>
+        </li>
+        <li>
+          <input class="govuk-checkboxes__input" type="checkbox" id="childcare-and-early-years">
+          <label class="govuk-label govuk-checkboxes__label" for="childcare-and-early-years">
+            Billing and invoicing
+          </label>
+        </li>
+        <li>
+          <input class="govuk-checkboxes__input" type="checkbox" id="divorce-separation-and-legal-issues">
+          <label class="govuk-label govuk-checkboxes__label" for="divorce-separation-and-legal-issues">
+            Budgeting
+          </label>
+        </li>
+        <li>
+          <input class="govuk-checkboxes__input" type="checkbox" id="childcare-and-early-years">
+          <label class="govuk-label govuk-checkboxes__label" for="childcare-and-early-years">
+            Contract management
+          </label>
+        </li>
+        <li>
+          <input class="govuk-checkboxes__input" type="checkbox" id="divorce-separation-and-legal-issues">
+          <label class="govuk-label govuk-checkboxes__label" for="divorce-separation-and-legal-issues">
+            Debt collection
+          </label>
+        </li>
+        <li>
+          <input class="govuk-checkboxes__input" type="checkbox" id="childcare-and-early-years">
+          <label class="govuk-label govuk-checkboxes__label" for="childcare-and-early-years">
+            Enterprise resource planning (ERP)
           </label>
         </li>
       </ul>
