--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -58,3 +58,19 @@ $govuk-include-default-font-face: false;
 .hide-checkbox {
   visibility: hidden;
 }
+
+.nobox .govuk-checkboxes__label:before, .nobox .govuk-checkboxes__label:after {
+position: absolute !important;
+width: 1px !important;
+height: 1px !important;
+margin: 0 !important;
+padding: 0 !important;
+overflow: hidden !important;
+clip: rect(0 0 0 0) !important;
+clip-path: inset(50%) !important;
+border: 0 important;
+}
+
+.nobox .govuk-checkboxes__item { 
+padding-left: 0px;
+}
