--- a/app/views/gcloud-categories-miller.html
+++ b/app/views/gcloud-categories-miller.html
@@ -18,7 +18,9 @@
 <miller-columns class="miller-columns" for="taxonomy" selected="selected-items" id="miller-columns" aria-describedby="navigation-instructions">
   <ul id="taxonomy">
     <li>
-      <input class="govuk-visually-hidden" type="checkbox" id="accounting">
+      <div class="nobox">
+      <input class="govuk-checkboxes__input govuk-checkboxes__item" type="checkbox" id="accounting">
+      </div>
       <label class="govuk-label govuk-checkboxes__label for="accounting">
         Accounting and finance
       </label>
