Add all the current content categories

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -62,4 +62,5 @@ div[data-root=true] .govuk-checkboxes--small .govuk-checkboxes__item { padding-l
 
 
 .miller-columns__column {
-  width: 50% !important; }
+  width: 50% !important;
+}
