--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -62,3 +62,8 @@ div[data-root=true] .govuk-checkboxes--small .govuk-checkboxes__item { padding-l
 .miller-columns__column {
   width: 50% !important;
 }
+
+.insight {
+  padding: 10px;
+  background: #f1f1f1;
+}
