--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,18 +20,32 @@
 
       <h2 class="govuk-heading-m">G-Cloud prototype index</h2>
 
+      <h3 class="govuk-heading-s">Creating a new supplier account journey</h3>
+      <p class="insight">User research insight &mdash; users aren't clear on what contact details to enter, and there's confusion between supplier contact details and the login email address</p>
+
+      <ol class="govuk-list govuk-list--number">
+      <li><a href="supplier-account-contact-details">Add contact details for supplier</a></li>
+      <li><a href="supplier-account-create-login">Create login</a></li>
+
+      </ol>
+
+
       <h3 class="govuk-heading-s">Choosing G-Cloud service type redesign</h3>
+      <p class="insight">User research insight &mdash; users don't see the lots with links as a clear call to action</p>
       <ol class="govuk-list govuk-list--number">
       <li><a href="gcloud-home">G-Cloud home – beginning</a></li>
       <li><a href="gcloud-service-type">Picking a service type question page</a></li>
       <li><a href="gcloud-service-dashboard">G-Cloud home – when a service has been added</a></li>
       </ol>
 
-      <h3 class="govuk-heading-s">Service categories redesign: select high-level categories then select subcategories in a one-thing-per-page style </h3>
-      <ol class="govuk-list govuk-list--number">
-        <li><a href="gcloud-categories-miller">(A) Miller columns</a></li>
+      <h3 class="govuk-heading-s">Adding categories to a service</h3>
+      <p class="insight">User research insight &mdash; the list of categories is extremely long and it's difficult for users to think of categories and find one in the Marketplace that matches</p>
 
-      <li><a href="gcloud-categories-list">(B) Sequential category picker</a></li>
+      <ol class="govuk-list govuk-list--number">
+        <li><a href="gcloud-categories-miller">(A) Miller columns</a> &mdash; modify the GOV.UK miller columns element for the Digital Marketplace</li>
+        <strike>
+      <li><a href="gcloud-categories-list">(B) Sequential category picker</a> &mdash;  select high-level categories then select subcategories in a one-thing-per-page style </li>
+      </strike> This doesn't work because of nested options inside high-level categories
     </div>
   </div>
 
