--- a/app/views/supplier-account-create-login.html
+++ b/app/views/supplier-account-create-login.html
@@ -33,7 +33,7 @@
             </div>
 
 
-            <a href="gcloud-service-type">
+            <a href="#">
           <button class="govuk-button" data-module="govuk-button">
           Continue
           </button>
