--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,8 +30,8 @@
       </ol>
 
 
-      <h3 class="govuk-heading-s">Choosing G-Cloud service type redesign</h3>
-      <p class="insight">User research insight &mdash; users don't see the lots with links as a clear call to action</p>
+      <h3 class="govuk-heading-s">Choosing G-Cloud lot</h3>
+      <p class="insight">User research insight &mdash; users don't see the lots with links as a clear call to action (and a separate problem, not addressed here, is that users don't understand which lot their service falls into)</p>
       <ol class="govuk-list govuk-list--number">
       <li><a href="gcloud-home">G-Cloud home – beginning</a></li>
       <li><a href="gcloud-service-type">Picking a service type question page</a></li>
