--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,13 +20,19 @@
 
       <h2 class="govuk-heading-m">G-Cloud prototype index</h2>
 
+      <h3 class="govuk-heading-s">Application progress</h3>
+      <p class="insight">User research insight &mdash; for returning users, it's not always clear they have to confirm their details before they can continue</p>
+      <ol class="govuk-list govuk-list--number">
+      <li><a href="application-progress-home">Application progress home</a></li>
+      </ol>
+
+
       <h3 class="govuk-heading-s">Creating a new supplier account journey</h3>
       <p class="insight">User research insight &mdash; users aren't clear on what contact details to enter, and there's confusion between supplier contact details and the login email address</p>
 
       <ol class="govuk-list govuk-list--number">
       <li><a href="supplier-account-contact-details">Add contact details for supplier</a></li>
       <li><a href="supplier-account-create-login">Create login</a></li>
-
       </ol>
 
 
