--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -67,3 +67,28 @@ div[data-root=true] .govuk-checkboxes--small .govuk-checkboxes__item { padding-l
   padding: 10px;
   background: #f1f1f1;
 }
+
+.gcloud-app-links {
+  border-bottom: 1px solid black;
+  margin-bottom: 10px;
+}
+
+
+.progress-status {
+  text-align: center;
+}
+
+.status-in-progress {
+  background: blue;
+  padding: 10px;
+}
+
+
+.status-cant-start {
+  background: grey;
+  padding: 10px;
+}
+
+.app-task-list__items {
+    margin-left: -30px !important;
+}
