Add info about homepage design

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,7 +18,30 @@
       </p>
 
 
-      <h2 class="govuk-heading-m">G-Cloud prototype index</h2>
+      <h2 class="govuk-heading-m">G-Cloud design index</h2>
+      <hr>
+
+      <h3 class="govuk-heading-s">WIP &mdash; Homepage &mdash; Figma only</h3>
+      <p class="insight">User research insight &mdash; users miss the login link and try to set up a new supplier account
+      </p>
+
+      <ol class="govuk-list govuk-list--number">
+      <li><strong>Change create account + login flow on homepage</strong> </br>
+      Add a button to create an account (with the next step to choose seller or buyer account), with a link alongside it to log in.
+      </br></br>
+     Consider changing the H1 to describe what the Digital Marketplace does (align with Pay, Notify)
+
+      <img src="public/images/home-change-flow.png" width="80%">
+
+      <li><strong>More conservative redesign: modify login content + explanation</strong></br>
+     Add a link to login in the seller section, and add some content to make it clear to sellers they can reuse info from previous applications.
+     <a href="https://www.figma.com/file/Szaa6q4RgQhZKBTVp5y5T3/Digital-Marketplace?node-id=1181%3A0">See Figma for more design options and discussion</a>.</li>
+
+      </ol>
+
+      <hr>
+
+      <h2 class="govuk-heading-m">HTML prototypes</h2>
 
       <h3 class="govuk-heading-s">Application progress</h3>
       <p class="insight">User research insight &mdash; for returning users, it's not always clear they have to confirm their details before they can continue</p>
