--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,7 +33,7 @@
 
       <img src="public/images/home-change-flow.png" width="80%">
 
-      <li><strong>More conservative redesign: modify login content + explanation</strong></br>
+      <li><strong>More MVP redesign: modify login content + explanation</strong></br>
      Add a link to login in the seller section, and add some content to make it clear to sellers they can reuse info from previous applications.
      <a href="https://www.figma.com/file/Szaa6q4RgQhZKBTVp5y5T3/Digital-Marketplace?node-id=1181%3A0">See Figma for more design options and discussion</a>.</li>
 
