--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -101,7 +101,10 @@ div[data-root=true] .govuk-checkboxes--small .govuk-checkboxes__item { padding-l
     background: #005ea5;
     color: #fff !important;
   }
-  
 .govuk-width-container {
+  width: 100%;
+}
+
+.product-masthead {
   width: 100%;
 }
