--- a/app/views/homepage_1.html
+++ b/app/views/homepage_1.html
@@ -5,28 +5,38 @@
   GOV.UK Prototype Kit
 {% endblock %}
 
+
 {% block content %}
 
+
+
+
+<div class="govuk-width-container">
+  <div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <p>Trying to make this go 100% wide</p>
+  </div>
+</div>
+
+
+
+
+<div class="product-page-intro">
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <div class="product-page-intro">
     <h1 class="govuk-heading-xl product-page-intro">
       Buy or sell digital services and support for the public sector
     </h1>
+      </div>
     </div>
-  </div>
-
+    </div>
 
 
     <div class="govuk-grid-column-two-thirds">
 
       <p>
-        Improving the experience for suppliers, focusing on G-Cloud. <a href="https://www.figma.com/file/Szaa6q4RgQhZKBTVp5y5T3/Digital-Marketplace?node-id=334%3A11">Figma link</a>
+        Page content
       </p>
-
-
-      <h2 class="govuk-heading-m">G-Cloud design index</h2>
-      <hr>
 
     </div>
   </div>
