--- a/app/views/index.html
+++ b/app/views/index.html
@@ -43,6 +43,13 @@
 
       <h2 class="govuk-heading-m">HTML prototypes</h2>
 
+      <h3 class="govuk-heading-s">Homepage</h3>
+      <p class="insight">User research insight &mdash; login is hard to find</p>
+      <ol class="govuk-list govuk-list--number">
+      <li><a href="homepage_1">Homepage v1</a></li>
+      </ol>
+
+
       <h3 class="govuk-heading-s">Application progress</h3>
       <p class="insight">User research insight &mdash; for returning users, it's not always clear they have to confirm their details before they can continue</p>
       <ol class="govuk-list govuk-list--number">
