--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -13,21 +13,10 @@ $govuk-assets-path: '/govuk/assets/';
 @import "patterns/step-by-step-related";
 @import "patterns/task-list";
 @import "patterns/related-items";
+@import "patterns/start-page.scss";
 
 // Components that aren't in Frontend
 @import "components/cookie-banner";
-
-// Don't include the font since it needs to be served from the node modules
-// directory it'll only 404 on apps.
-$govuk-include-default-font-face: false;
-
-// Core styles used for the example pages
-@import "node_modules/govuk-frontend/govuk/base";
-@import "node_modules/govuk-frontend/govuk/objects/all";
-@import "node_modules/govuk-frontend/govuk/core/all";
-@import "node_modules/govuk-frontend/govuk/components/checkboxes/checkboxes";
-@import "node_modules/govuk-frontend/govuk/components/back-link/back-link";
-@import "node_modules/govuk-frontend/govuk/components/breadcrumbs/breadcrumbs";
 
 // Component specific styles
 @import "miller-columns";
@@ -105,6 +94,7 @@ div[data-root=true] .govuk-checkboxes--small .govuk-checkboxes__item { padding-l
   width: 100%;
 }
 
-.product-masthead {
-  width: 100%;
+
+.start-page-banner {
+  margin-top: -10px;
 }
