--- a/app/views/homepage_1.html
+++ b/app/views/homepage_1.html
@@ -39,9 +39,11 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-          <h1 class="start-page-banner__text start-page-banner__heading govuk-heading-xl">Buy or sell digital services and support for the public sector
+          <h1 class="start-page-banner__text start-page-banner__heading govuk-heading-xl">Buy or sell digital services and support
 </h1>
-          <p class="start-page-banner__text start-page-banner__description govuk-body govuk-!-font-size-27">Some text about the Digital Marketplace.</p>
+<!--
+          <p class="start-page-banner__text start-page-banner__description govuk-body govuk-!-font-size-27">For public sector teams</p>
+          -->
           <div class="start-page-banner__actions">
             {{ govukButton({
               text: "Sign in",
@@ -69,7 +71,8 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-  <h2 class="govuk-heading-m">
+      <p>Some content here</p>
+<!--  <h2 class="govuk-heading-m">
       Find technology or people for digital projects in the public sector
       </h2>
 
@@ -96,12 +99,12 @@
   <p>
   eg access to mission-critical datacentres
   </p>
--->
+
     </div>
     <div class="govuk-grid-column-one-third">
       <h3 class="govuk-heading-m">Sell services</h3>
       </div>
-
+-->
   </div>
 
 {% endblock %}
