--- a/app/views/homepage_1.html
+++ b/app/views/homepage_1.html
@@ -18,7 +18,7 @@
       <a class="govuk-breadcrumbs__link" href="#">GOV.UK services</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="#">Digital Marketplace</a>
+      <a class="govuk-breadcrumbs__link strong name" href="#">Digital Marketplace</a>
     </li>
   </ol>
 </div>
@@ -72,6 +72,8 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <p>Some content here</p>
+
+      <p>We should think about how to succinctly explain the Digital Marketplace process to both buyers and sellers, since it's not exactly like a typical online shopping or buying experience.</p>
 <!--  <h2 class="govuk-heading-m">
       Find technology or people for digital projects in the public sector
       </h2>
