--- a/app/views/homepage_1.html
+++ b/app/views/homepage_1.html
@@ -52,7 +52,7 @@
               isStartButton: true
             }) }}
             <p class="govuk-body start-page-banner__text">or
-            <a class="govuk-link govuk-link--no-visited-state" href="/home">create an account</a></p>
+            <a class="govuk-link govuk-link--no-visited-state" href="create_account_1">create an account</a></p>
           </div>
 
         </div>
